--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,6 +50,13 @@ footer {
 }
 
 /* utlities */
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin-inline: auto;
+}
+
 .accent-btn {
   font-weight: bold;
   color:  var(--color-primary-dark) !important;
@@ -60,6 +67,33 @@ footer {
 .accent-btn:hover {
   background-color: var(--color-primary-dark);
   color: var(--color-primary-lightblue) !important;
+}
+
+.cta-btn {
+  font-weight: bold;
+  text-decoration: none;
+  color:  var(--vt-c-white);
+  justify-self: center;
+  padding: 1em 1.5em;
+  background-color: var(--color-primary-dark);
+  transition: all 500ms ease-in;
+}
+
+.cta-btn:hover {
+  color: var(--color-primary-dark);
+  background-color: var(--vt-c-white);
+}
+
+.outline-btn {
+  color: var(--color-primary-dark);
+  background-color: transparent !important;
+  border: 1px solid var(--color-primary-dark);
+  transition: all 300ms ease-in;
+}
+
+.outline-btn:hover {
+  border-color: var(--color-primary-lightblue);
+  background-color: var(--vt-c-white);
 }
 
 
