--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,18 +5,55 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  /* transition:
+    color 0.5s,
+    background-color 0.5s; */
+  line-height: 1.6;
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-size: 18px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-size: clamp(1rem, calc(1rem + 2vw), 3rem);
+  text-transform: uppercase;
+  line-height: 1.2;
+  color: #fff;
+}
+
 img {
   width: 100%;
 }
 
 header {
+  position: relative;
     background-color: var(--color-primary-dark);
-    /* padding-right: 0px !important; */
-    /* padding: 1em; */
-    /* padding-left: calc(var(--section-gap) / 2); */
     height: 10vh;
     padding-inline: 1.5em !important;
     transition: all 0.5s ease-in-out;
+}
+
+header > *,
+header nav {
+  height: 100%;
 }
 
 header ul li a,
@@ -34,67 +71,48 @@ ul {
 }
 
 ul li a {
+  display: inline-block;
   color: #fff;
   text-decoration: none;
 }
 
-
-.logo img {
+.logo {
   max-width: 100px;
-  margin-right: 5em;
+}
+
+.logo a {
+  display: block;
+  width: 100%;
+}
+
+.cta-container .cta-btns {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  margin-block: 4em;
 }
 
 footer {
-  padding: 5em;
+  /* padding-block: 2em; */
   background-color: var(--color-primary-dark);
 }
 
-/* utlities */
-
-.container {
-  width: 100%;
-  max-width: 1440px;
+footer .logo {
   margin-inline: auto;
 }
 
-.accent-btn {
-  font-weight: bold;
-  color:  var(--color-primary-dark) !important;
-  padding: 0.5em 1em;
-  background-color: var(--color-primary-lightblue);
+.footer-container {
+  padding-block: 1em;
 }
 
-.accent-btn:hover {
-  background-color: var(--color-primary-dark);
-  color: var(--color-primary-lightblue) !important;
+footer .copyright-container {
+  font-size: .8rem;
+  text-align: center;
+  margin-top: 2em;
+  padding: 1em;
+  background-color: var(--color-secondary-dark);
 }
 
-.cta-btn {
-  font-weight: bold;
-  text-decoration: none;
-  color:  var(--vt-c-white);
-  justify-self: center;
-  padding: 1em 1.5em;
-  background-color: var(--color-primary-dark);
-  transition: all 500ms ease-in;
-}
-
-.cta-btn:hover {
-  color: var(--color-primary-dark);
-  background-color: var(--vt-c-white);
-}
-
-.outline-btn {
-  color: var(--color-primary-dark);
-  background-color: transparent !important;
-  border: 1px solid var(--color-primary-dark);
-  transition: all 300ms ease-in;
-}
-
-.outline-btn:hover {
-  border-color: var(--color-primary-lightblue);
-  background-color: var(--vt-c-white);
-}
 
 
 /* #app {
