--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,6 +34,13 @@ a {
   display: inline-block;
 }
 
+a:focus:not(.logo > a),
+a:focus-visible:not(.logo > a) {
+  outline: 1px solid var(--color-accent);
+  padding: 1em 2em;
+  border-radius: 99vw;
+}
+
 h1,
 h2,
 h3,
@@ -50,6 +57,16 @@ h1 {
   text-transform: uppercase;
   line-height: 1.2;
   color: #fff;
+}
+
+input,
+button {
+  outline: 0px;
+}
+
+input:hover,
+input:focus {
+  box-shadow: 0px 0px 10px var(--color-accent);
 }
 
 img {
