--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,7 +37,8 @@ a {
 a:focus:not(.logo > a),
 a:focus-visible:not(.logo > a) {
   outline: 1px solid var(--color-accent);
-  padding: 1em 2em;
+  padding-inline: 1em;
+  /* padding: 16px 15px; */
   border-radius: 99vw;
 }
 
@@ -49,15 +50,20 @@ h5,
 h6,
 p,
 a {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 h1 {
-  font-size: clamp(1rem, calc(1rem + 2vw), 3rem);
-  text-transform: uppercase;
+  font-size: clamp(1.5rem, calc(1.5rem + 3vw), 5.61rem);
+  /* text-transform: uppercase; */
   line-height: 1.2;
   color: #fff;
 }
+
+h2 {
+  font-size: clamp(1.5rem, calc(1.5rem + 3vw), 4.209rem);
+}
+
 
 input,
 button {
@@ -125,6 +131,16 @@ ul li a {
   margin-block: 4em;
 }
 
+.curve-banner {
+  background-image: url(../assets/curve-banner.png);
+  background-position: 60% 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  min-height: 32vw;
+}
+
 footer {
   background: rgb(8,4,17);
   background: linear-gradient(90deg, rgba(8,4,17,1) 0%, rgba(65,78,210,1) 100%);
@@ -149,5 +165,6 @@ footer .copyright-container {
 @media screen and (min-width: 785px) {
   header li a {
     margin-bottom: 0px;
+    margin-right: 0px;
   }
 }
