--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,9 +84,19 @@
   transition: all 500ms ease-in-out;
 }
 
+.btn-accent {
+  background-color: var(--color-primary);
+  border: 1px solid var(--color-dark);
+  transition: all 500ms ease-in-out;
+}
+
 .btn:hover {
   border: 1px solid var(--color-dark);
   opacity: 0.8;
+}
+
+.btn-outline:hover {
+  border: 1px solid var(--color-primary);
 }
 
 .flex-container {
