--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,10 +21,18 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
+:root {
+  --color-primary: #414ed2;
+  --color-light: rgb(223, 226, 252);
+  --color-dark: rgb(8, 4, 17);
+  --color-accent: rgb(163, 171, 243);
+}
+
 /* semantic color variables for this project */
 :root {
-  /* --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
+  --color-background: var(--vt-c-white);
+
+  /* --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
   --color-border: var(--vt-c-divider-light-2);
@@ -36,24 +44,26 @@
   --section-gap: 160px; */
 }
 
-:root {
-  --color-primary: #414ed2;
-  --color-light: rgb(223, 226, 252);
-  --color-dark: rgb(8, 4, 17);
-  --color-accent: rgb(163, 171, 243);
-}
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
+    /* --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
 
-    --color-heading: var(--vt-c-text-dark-1);
+    --color-heading: var(--vt-c-text-dark-1); */
+    /* --color-light: var( --vt-c-white-mute); */
+    --color-background: var(--color-light);
     --color-text: var(--vt-c-text-dark-2);
+  }
+
+  .service .body > .row,
+  .contact-container__wrapper form,
+  .contact-info {
+    background-color: var(--color-accent);
   }
 }
 
