--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,8 +5,13 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  overflow-x: clip;
+}
+
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   color: var(--color-text);
   /* background: var(--color-dark); */
   background: linear-gradient(90deg, rgba(8,4,17,1) 0%, rgba(65,78,210,1) 100%);
@@ -24,7 +29,7 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
