--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,18 +17,7 @@ body {
   background: linear-gradient(90deg, rgba(8,4,17,1) 0%, rgba(65,78,210,1) 100%);
   line-height: 1.6;
   font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  "Finlandica", sans-serif;
   font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -68,6 +57,27 @@ h1 {
 h2 {
   font-size: clamp(1.5rem, calc(1.5rem + 3vw), 4.209rem);
   line-height: 1.2;
+}
+
+h3 {
+  font-size: clamp(1.5rem, calc(1rem + 2vw), 3.157rem);
+  line-height: 1.2;
+}
+
+p {
+  font-size: clamp(1.25rem, calc(1.25rem + 3vw), 1.69rem);
+  line-height: 1.2;
+  /* font-size: 1.69rem; */
+}
+
+a:not(.btn, header nav a, footer nav a) {
+  color: var(--vt-c-black-mute) !important;
+  text-decoration-color: var(--color-accent);
+  transition: all 500ms ease-in-out;
+}
+
+a:hover {
+  opacity: 0.8;
 }
 
 input,
