--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -81,7 +81,7 @@
 /* utlities */
 
 .container {
-  width: 80%;
+  width: 85%;
   max-width: 1440px;
   margin-inline: auto;
 }
@@ -95,12 +95,12 @@
   font-weight: bold;
   text-decoration: none;
   color:  var(--color-white);
-  padding: 0.7em 1.5em;
+  padding: 0.5em 1em;
   /* background-color: var(--color-dark);
   border: 1px solid var(--color-primary); */
   background-color: var(--color-primary);
   border: 1px solid var(--color-accent);
-  border-radius: 100vw;
+  border-radius: .5vw;
   transition: all 500ms ease-in-out;
 }
 
@@ -142,6 +142,7 @@
 .border-outline
 {
   padding: 1em 2em;
-  border: 1px solid var(--color-primary);;
+  border: 1px solid var(--color-primary);
+  border-radius: .5vw;
 }
 
