--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -52,7 +52,7 @@ a {
 h1 {
   font-size: clamp(1.5rem, calc(1rem + 3vw), 5.61rem);
   text-align: center;
-  letter-spacing: 5px;
+  /* letter-spacing: 5px; */
   color: var(--color-white);
   /* font-size: clamp(2rem, calc(2rem + 6vw), 60%); */
   line-height: 1.2;
@@ -102,10 +102,11 @@ img {
 
 header {
   position: relative;
+  padding-block: 2rem;
   background: var(--color-dark);
   /* background: linear-gradient(90deg, rgba(8,4,17,1) 0%, rgba(65,78,210,1) 100%); */
   background: linear-gradient(90deg, rgba(8,4,17,1) 100%, rgba(65,78,210,1) 0%);
-  height: 10vh;
+  min-height: 10vh;
   /* border-bottom: 1px solid var(--color-primary);; */
   transition: all 0.5s ease-in-out;
 }
@@ -131,7 +132,7 @@ ul li a {
 }
 
 .logo {
-  max-width: 100px;
+  max-width: 130px;
 }
 
 .logo a {
